k8s/overlays/local/argocd/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-local
  labels:
    istio-injection: enabled
