k8s/overlays/local/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-local
  labels:
    app.kubernetes.io/name: argocd-local
    app.kubernetes.io/component: gitops-controller
    app.kubernetes.io/part-of: blocksecops-platform
    app.kubernetes.io/managed-by: kustomize
    environment: local
    team: platform
    kubernetes.io/metadata.name: argocd-local
