k8s/overlays/local/argocd/argocd-server-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: NodePort
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
    nodePort: 30443
  - name: grpc
    port: 443
    protocol: TCP
    targetPort: 8080
    nodePort: 30444
